# chatterbox

./: .gitignore  FULL_REPORT.md  README_ONNX.md  VERIFICATION_CHECKLIST.md  dump_error.txt  dump_intermediates.py  export_campplus.py  export_cfm_estimator.py  export_hifigan.py  feature_checklist.md  onnx_tts_pipeline.py  repomix-output.xml  walkthrough.md
candle/: Cargo.toml  FULL_REPORT.md  base_keys.txt  debug_tensors.safetensors  extract_debug.py  keys.txt  log.txt  output.txt  run_output_fix2.txt  s3gen_keys.txt  s3gen_shapes.txt  s3tok_keys.txt
candle/examples/: generate.rs  list_keys.rs  parity_test.rs  split_generate.rs  test_vocoder.rs  verify_shapes.rs  verify_weights.rs
candle/src/: audio.rs  campplus.rs  chatterbox.rs  gpt2.rs  hifigan.rs  lib.rs  main.rs  modules.rs  s3gen.rs  s3tokenizer.rs  sampling.rs  t3_model.rs  voice_encoder.rs
parity_data/: mel_camp.npy  mel_s3gen.npy  mel_s3tok.npy  mel_ve.npy  prompt_feat.npy  prompt_tokens.npy  ref_16k.npy  ref_24k.npy  spk_emb_camp.npy  spk_emb_camp_full.npy  spk_emb_ve.npy  text_tokens.npy
s3tokenizer-v2-model/: config.json
src/chatterbox/: tts.py
src/chatterbox/models/s3gen/: s3gen.py  xvector.py
src/chatterbox/models/s3tokenizer/: s3_local_utils.py  s3_model_v2_local.py  s3tokenizer.py
src/chatterbox/models/t3/: t3.py
